--- a/styles/style.css
+++ b/styles/style.css
@@ -31,20 +31,20 @@ main {
   position: relative;
 }
 
-#map {
+.main-display-element {
   height: calc(100vh - var(--xs-adjust-height));
 }
 
-.search {
-  z-index: 40000;
-  position: relative;
-}
 #floating-search {
   position: absolute;
   top: 9px;
   left: 35px;
+  z-index: 40000;
 }
 
+.search {
+  position: relative;
+}
 .search button {
   position: absolute;
   top: 1px;
@@ -54,13 +54,22 @@ main {
   background: blue;
 }
 
+#search-results {
+  margin-top: 1px;
+  margin-left: 2px;
+  margin-right: 2px;
+  opacity: 0.9;
+  border-radius: 0 0 5px 5px;
+  max-height: 70vh;
+}
+
 /* --------- Custom CSS for bootstrap breakpoints (reference size and above) --------- */
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
   .h-sm-100 {
     height: 100%;
   }
-  #map {
+  .main-display-element {
     height: 100vh;
   }
 }
@@ -72,9 +81,8 @@ main {
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
 }
-
-/* X-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
+.search {
+  position: relative;
 }
 
 /* XX-Large devices (larger desktops, 1400px and up) */
