--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,8 @@ main {
   position: relative;
 }
 
-.main-display-element {
+.main-display-element,
+#map {
   height: calc(100vh - var(--xs-adjust-height));
 }
 
@@ -61,6 +62,7 @@ main {
   opacity: 0.9;
   border-radius: 0 0 5px 5px;
   max-height: 70vh;
+  font-size: 14px;
 }
 
 /* --------- Custom CSS for bootstrap breakpoints (reference size and above) --------- */
@@ -69,7 +71,8 @@ main {
   .h-sm-100 {
     height: 100%;
   }
-  .main-display-element {
+  .main-display-element,
+  #map {
     height: 100vh;
   }
 }
