--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,17 @@ main {
   z-index: 1001;
 }
 
+#spinner-wrapper {
+  background-color: grey;
+  opacity: 0.8;
+  z-index: 100;
+}
+
+#spinner {
+  width: 3rem;
+  height: 3rem;
+}
+
 .search {
   position: relative;
 }
